--- a/BE/BE.csproj
+++ b/BE/BE.csproj
@@ -9,5 +9,9 @@
     <PackageReference Include="Swashbuckle.Core" Version="5.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EShop.Data\EShop.Data.csproj" />
+  </ItemGroup>
+
 
 </Project>
