--- a/EShop.Data/appsettings.json
+++ b/EShop.Data/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
-
+  },
+  "ConnectionStrings": {
+    "EShopSolutionDb": "Server=.;Database=EshopDb;Trusted_Connection=True;"
+  },
+  "AllowedHosts": "*"
 }
